rsrc/native/windows/raylib/include/raylib.h

    typedef enum bool { false, true } bool;
typedef struct Vector2 {
    float x;                
    float y;                
} Vector2;
typedef struct Vector3 {
    float x;                
    float y;                
    float z;                
} Vector3;
typedef struct Matrix {
    float m0, m4, m8, m12;  
    float m1, m5, m9, m13;  
    float m2, m6, m10, m14; 
    float m3, m7, m11, m15; 
} Matrix;
typedef struct Color {
    unsigned char r;        
    unsigned char g;        
    unsigned char b;        
    unsigned char a;        
} Color;
typedef struct Rectangle {
    float x;                
    float y;                
    float width;            
    float height;           
} Rectangle;
typedef struct Image {
    void *data;             
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Image;
typedef struct Texture {
    unsigned int id;        
    int width;              
    int height;             
    int mipmaps;            
    int format;             
} Texture;
typedef Texture Texture2D;
typedef struct GlyphInfo {
    int value;              
    int offsetX;            
    int offsetY;            
    int advanceX;           
    Image image;            
} GlyphInfo;
typedef struct Font {
    int baseSize;           
    int glyphCount;         
    int glyphPadding;       
    Texture2D texture;      
    Rectangle *recs;        
    GlyphInfo *glyphs;      
} Font;
typedef struct Camera3D {
    Vector3 position;       
    Vector3 target;         
    Vector3 up;             
    float fovy;             
    int projection;         
} Camera3D;
typedef Camera3D Camera;    
typedef struct Mesh {
    int vertexCount;        
    int triangleCount;      
    float *vertices;        
    float *texcoords;       
    float *texcoords2;      
    float *normals;         
    float *tangents;        
    unsigned char *colors;      
    unsigned short *indices;    
    float *animVertices;    
    float *animNormals;     
    unsigned char *boneIds; 
    float *boneWeights;     
    unsigned int vaoId;     
    unsigned int *vboId;    
} Mesh;
typedef struct Shader {
    unsigned int id;        
    int *locs;              
} Shader;
typedef struct MaterialMap {
    Texture2D texture;      
    Color color;            
    float value;            
} MaterialMap;
typedef struct Material {
    Shader shader;          
    MaterialMap *maps;      
    float params[4];        
} Material;
typedef struct Transform {
    Vector3 translation;    
    Quaternion rotation;    
    Vector3 scale;          
} Transform;
typedef struct BoneInfo {
    char name[32];          
    int parent;             
} BoneInfo;
typedef struct Model {
    Matrix transform;       
    int meshCount;          
    int materialCount;      
    Mesh *meshes;           
    Material *materials;    
    int *meshMaterial;      
    int boneCount;          
    BoneInfo *bones;        
    Transform *bindPose;    
} Model;
typedef struct Ray {
    Vector3 position;       
    Vector3 direction;      
} Ray;
typedef struct BoundingBox {
    Vector3 min;            
    Vector3 max;            
} BoundingBox;
typedef struct Wave {
    unsigned int frameCount;    
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
    void *data;                 
} Wave;
typedef struct rAudioBuffer rAudioBuffer;
typedef struct AudioStream {
    rAudioBuffer *buffer;       
    unsigned int sampleRate;    
    unsigned int sampleSize;    
    unsigned int channels;      
} AudioStream;
typedef struct Sound {
    AudioStream stream;         
    unsigned int frameCount;    
} Sound;
typedef struct Music {
    AudioStream stream;         
    unsigned int frameCount;    
    bool looping;               
    int ctxType;                
    void *ctxData;              
} Music;
typedef struct VrDeviceInfo {
    int hResolution;                
    int vResolution;                
    float hScreenSize;              
    float vScreenSize;              
    float vScreenCenter;            
    float eyeToScreenDistance;      
    float lensSeparationDistance;   
    float interpupillaryDistance;   
    float lensDistortionValues[4];  
    float chromaAbCorrection[4];    
} VrDeviceInfo;
RLAPI void BeginShaderMode(Shader shader);                        
RLAPI void EndShaderMode(void);                                   
RLAPI void BeginBlendMode(int mode);                              
RLAPI void EndBlendMode(void);                                    
RLAPI Shader LoadShader(const char *vsFileName, const char *fsFileName);   
RLAPI int GetShaderLocation(Shader shader, const char *uniformName);       
RLAPI void SetShaderValue(Shader shader, int locIndex, const void *value, int uniformType);               
RLAPI void SetShaderValueMatrix(Shader shader, int locIndex, Matrix mat);         
RLAPI void UnloadShader(Shader shader);                                    
RLAPI void DrawTextEx(Font font, const char *text, Vector2 position, float fontSize, float spacing, Color tint);    
RLAPI int MeasureText(const char *text, int fontSize);                                      
RLAPI Vector2 MeasureTextEx(Font font, const char *text, float fontSize, float spacing);    
RLAPI int GetGlyphIndex(Font font, int codepoint);                                          
RLAPI void DrawLine3D(Vector3 startPos, Vector3 endPos, Color color);                                    
RLAPI void DrawCircle3D(Vector3 center, float radius, Vector3 rotationAxis, float rotationAngle, Color color); 
RLAPI void DrawCube(Vector3 position, float width, float height, float length, Color color);             
RLAPI void DrawCubeV(Vector3 position, Vector3 size, Color color);                                       
RLAPI void DrawCubeWires(Vector3 position, float width, float height, float length, Color color);        
RLAPI void DrawCubeTexture(Texture2D texture, Vector3 position, float width, float height, float length, Color color); 
RLAPI void DrawSphere(Vector3 centerPos, float radius, Color color);                                     
RLAPI void DrawSphereEx(Vector3 centerPos, float radius, int rings, int slices, Color color);            
RLAPI void DrawSphereWires(Vector3 centerPos, float radius, int rings, int slices, Color color);         
RLAPI void DrawCylinder(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color); 
RLAPI void DrawCylinderWires(Vector3 position, float radiusTop, float radiusBottom, float height, int slices, Color color); 
RLAPI void DrawPlane(Vector3 centerPos, Vector2 size, Color color);                                      
RLAPI void DrawRay(Ray ray, Color color);                                                                
RLAPI void DrawGrid(int slices, float spacing);                                                          
RLAPI Model LoadModel(const char *fileName);                                                
RLAPI Model LoadModelFromMesh(Mesh mesh);                                                   
RLAPI void UnloadModel(Model model);                                                        
RLAPI void DrawModel(Model model, Vector3 position, float scale, Color tint);                           
RLAPI void DrawModelEx(Model model, Vector3 position, Vector3 rotationAxis, float rotationAngle, Vector3 scale, Color tint); 
RLAPI void DrawModelWires(Model model, Vector3 position, float scale, Color tint);                      
RLAPI void DrawModelWiresEx(Model model, Vector3 position, Vector3 rotationAxis, float rotationAngle, Vector3 scale, Color tint); 
RLAPI void DrawBoundingBox(BoundingBox box, Color color);                                               
RLAPI void DrawBillboard(Camera camera, Texture2D texture, Vector3 position, float size, Color tint);   
RLAPI void DrawBillboardRec(Camera camera, Texture2D texture, Rectangle source, Vector3 position, Vector2 size, Color tint); 
RLAPI void UnloadMesh(Mesh mesh);                                                           
RLAPI bool ExportMesh(Mesh mesh, const char *fileName);                                     
RLAPI Mesh GenMeshPlane(float width, float length, int resX, int resZ);                     
RLAPI Mesh GenMeshCube(float width, float height, float length);                            
RLAPI Mesh GenMeshSphere(float radius, int rings, int slices);                              
RLAPI Mesh GenMeshHemiSphere(float radius, int rings, int slices);                          
RLAPI Mesh GenMeshCylinder(float radius, float height, int slices);                         
RLAPI Mesh GenMeshTorus(float radius, float size, int radSeg, int sides);                   
RLAPI Mesh GenMeshKnot(float radius, float size, int radSeg, int sides);                    
RLAPI Mesh GenMeshHeightmap(Image heightmap, Vector3 size);                                 
RLAPI Mesh GenMeshCubicmap(Image cubicmap, Vector3 cubeSize);                               
RLAPI Material LoadMaterialDefault(void);                                                   
RLAPI void UnloadMaterial(Material material);                                               
RLAPI bool CheckCollisionSpheres(Vector3 center1, float radius1, Vector3 center2, float radius2);       
RLAPI bool CheckCollisionBoxes(BoundingBox box1, BoundingBox box2);                                     
RLAPI bool CheckCollisionBoxSphere(BoundingBox box, Vector3 center, float radius);                      
RLAPI void InitAudioDevice(void);                                     
RLAPI void CloseAudioDevice(void);                                    
RLAPI bool IsAudioDeviceReady(void);                                  
RLAPI void SetMasterVolume(float volume);                             
RLAPI Wave LoadWave(const char *fileName);                            
RLAPI Sound LoadSound(const char *fileName);                          
RLAPI Sound LoadSoundFromWave(Wave wave);                             
RLAPI void UpdateSound(Sound sound, const void *data, int sampleCount); 
RLAPI void UnloadWave(Wave wave);                                     
RLAPI void UnloadSound(Sound sound);                                  
RLAPI void PlaySound(Sound sound);                                    
RLAPI void StopSound(Sound sound);                                    
RLAPI void PauseSound(Sound sound);                                   
RLAPI void ResumeSound(Sound sound);                                  
RLAPI bool IsSoundPlaying(Sound sound);                               
RLAPI void SetSoundVolume(Sound sound, float volume);                 
RLAPI void SetSoundPitch(Sound sound, float pitch);                   
RLAPI void WaveFormat(Wave *wave, int sampleRate, int sampleSize, int channels);  
RLAPI Wave WaveCopy(Wave wave);                                       
RLAPI void WaveCrop(Wave *wave, int initSample, int finalSample);     
RLAPI Music LoadMusicStream(const char *fileName);                    
RLAPI void UnloadMusicStream(Music music);                            
RLAPI void PlayMusicStream(Music music);                              
RLAPI void UpdateMusicStream(Music music);                            
RLAPI void StopMusicStream(Music music);                              
RLAPI void PauseMusicStream(Music music);                             
RLAPI void ResumeMusicStream(Music music);                            
RLAPI void SetMusicVolume(Music music, float volume);                 
RLAPI void SetMusicPitch(Music music, float pitch);                   
RLAPI float GetMusicTimeLength(Music music);                          
RLAPI float GetMusicTimePlayed(Music music);                          
RLAPI void UpdateAudioStream(AudioStream stream, const void *data, int frameCount); 
RLAPI void PlayAudioStream(AudioStream stream);                       
RLAPI void PauseAudioStream(AudioStream stream);                      
RLAPI void ResumeAudioStream(AudioStream stream);                     
RLAPI bool IsAudioStreamPlaying(AudioStream stream);                  
RLAPI void StopAudioStream(AudioStream stream);                       
RLAPI void SetAudioStreamVolume(AudioStream stream, float volume);    
RLAPI void SetAudioStreamPitch(AudioStream stream, float pitch);      