src/raylib-cr/lib_raylib.cr


  fun draw_text_ex = DrawTextEx(
    font : Font,
    text : UInt8*,
    position : Vector2,
    fontSize : Float32,
    spacing : Float32,
    tint : Color
  )

  fun measure_text = MeasureText(
    text : UInt8*,
    fontSize : Int32
  ) : Int32

  fun measure_text_ex = MeasureTextEx(
    font : Font,
    text : UInt8*,
    fontSize : Float32,
    spacing : Float32
  ) : Vector2

  fun format_text = FormatText(text : UInt8*, ...) : UInt8*

  fun sub_text = SubText(
    text : UInt8*,
    position : Int32,
    length : Int32
  ) : UInt8*

  fun get_glyph_index = GetGlyphIndex(font : Font, character : Int32) : Int32

  fun draw_line_3d = DrawLine3D(startPos : Vector3, endPos : Vector3, color : Color)

  fun draw_circle_3d = DrawCircle3D(
    center : Vector3,
    radius : Float32,
    rotationAxis : Vector3,
    rotationAngle : Float32,
    color : Color
  )

  fun draw_cube = DrawCube(position : Vector3, width : Float32, height : Float32, length : Float32, color : Color)

  fun draw_cube_v = DrawCubeV(position : Vector3, size : Vector3, color : Color)

  fun draw_cube_wires = DrawCubeWires(position : Vector3, width : Float32, height : Float32, length : Float32, color : Color)

  fun draw_cube_texture = DrawCubeTexture(
    texture : Texture2D,
    position : Vector3,
    width : Float32,
    height : Float32,
    length : Float32,
    color : Color
  )

  fun draw_sphere = DrawSphere(centerPos : Vector3, radius : Float32, color : Color)

  fun draw_sphere_ex = DrawSphereEx(
    centerPos : Vector3,
    radius : Float32,
    rings : Int32,
    slices : Int32,
    color : Color
  )

  fun draw_sphere_wires = DrawSphereWires(
    centerPos : Vector3,
    radius : Float32,
    rings : Int32,
    slices : Int32,
    color : Color
  )

  fun draw_cylinder = DrawCylinder(
    position : Vector3,
    radiusTop : Float32,
    radiusBottom : Float32,
    height : Float32,
    slices : Int32,
    color : Color
  )

  fun draw_cylinder_wires = DrawCylinderWires(
    position : Vector3,
    radiusTop : Float32,
    radiusBottom : Float32,
    height : Float32,
    slices : Int32,
    color : Color
  )

  fun draw_plane = DrawPlane(centerPos : Vector3, size : Vector2, color : Color)

  fun draw_ray = DrawRay(ray : Ray, color : Color)

  fun draw_grid = DrawGrid(slices : Int32, spacing : Float32)

  fun draw_gizmo = DrawGizmo(position : Vector3)

  fun load_model = LoadModel(fileName : UInt8*) : Model

  fun load_model_from_mesh = LoadModelFromMesh(mesh : Mesh) : Model

  fun unload_model = UnloadModel(model : Model)

  fun load_mesh = LoadMesh(fileName : UInt8*) : Mesh

  fun unload_mesh = UnloadMesh(mesh : Mesh*)

  fun export_mesh = ExportMesh(fileName : UInt8*, mesh : Mesh)

  fun mesh_bounding_box = MeshBoundingBox(mesh : Mesh) : BoundingBox

  fun mesh_tangents = MeshTangents(mesh : Mesh*)

  fun mesh_binormals = MeshBinormals(mesh : Mesh*)

  fun gen_mesh_plane = GenMeshPlane(
    width : Float32,
    length : Float32,
    resX : Int32,
    resZ : Int32
  ) : Mesh

  fun gen_mesh_cube = GenMeshCube(width : Float32, height : Float32, length : Float32) : Mesh

  fun gen_mesh_sphere = GenMeshSphere(
    radius : Float32,
    rings : Int32,
    slices : Int32
  ) : Mesh

  fun gen_mesh_hemi_sphere = GenMeshHemiSphere(
    radius : Float32,
    rings : Int32,
    slices : Int32
  ) : Mesh

  fun gen_mesh_cylinder = GenMeshCylinder(radius : Float32, height : Float32, slices : Int32) : Mesh

  fun gen_mesh_torus = GenMeshTorus(
    radius : Float32,
    size : Float32,
    radSeg : Int32,
    sides : Int32
  ) : Mesh

  fun gen_mesh_knot = GenMeshKnot(
    radius : Float32,
    size : Float32,
    radSeg : Int32,
    sides : Int32
  ) : Mesh

  fun gen_mesh_heightmap = GenMeshHeightmap(heightmap : Image, size : Vector3) : Mesh

  fun gen_mesh_cubicmap = GenMeshCubicmap(cubicmap : Image, cubeSize : Vector3) : Mesh

  fun load_material = LoadMaterial(fileName : UInt8*) : Material

  fun load_material_default = LoadMaterialDefault : Material

  fun unload_material = UnloadMaterial(material : Material)

  fun draw_model = DrawModel(model : Model, position : Vector3, scale : Float32, tint : Color)

  fun draw_model_ex = DrawModelEx(
    model : Model,
    position : Vector3,
    rotationAxis : Vector3,
    rotationAngle : Float32,
    scale : Vector3,
    tint : Color
  )

  fun draw_model_wires = DrawModelWires(model : Model, position : Vector3, scale : Float32, tint : Color)

  fun draw_model_wires_ex = DrawModelWiresEx(
    model : Model,
    position : Vector3,
    rotationAxis : Vector3,
    rotationAngle : Float32,
    scale : Vector3,
    tint : Color
  )

  fun draw_bounding_box = DrawBoundingBox(box_ : BoundingBox, color : Color)

  fun draw_billboard = DrawBillboard(
    camera : Camera3D,
    texture : Texture2D,
    center : Vector3,
    size : Float32,
    tint : Color
  )

  fun draw_billboard_rec = DrawBillboardRec(
    camera : Camera3D,
    texture : Texture2D,
    sourceRec : Rectangle,
    center : Vector3,
    size : Float32,
    tint : Color
  )

  fun check_collision_spheres = CheckCollisionSpheres(
    centerA : Vector3,
    radiusA : Float32,
    centerB : Vector3,
    radiusB : Float32
  ) : Bool

  fun check_collision_boxes = CheckCollisionBoxes(box1 : BoundingBox, box2 : BoundingBox) : Bool

  fun check_collision_box_sphere = CheckCollisionBoxSphere(
    box_ : BoundingBox,
    centerSphere : Vector3,
    radiusSphere : Float32
  ) : Bool

  fun check_collision_ray_sphere = CheckCollisionRaySphere(ray : Ray, spherePosition : Vector3, sphereRadius : Float32) : Bool

  fun check_collision_ray_sphere_ex = CheckCollisionRaySphereEx(
    ray : Ray,
    spherePosition : Vector3,
    sphereRadius : Float32,
    collisionPoint : Vector3*
  ) : Bool

  fun check_collision_ray_box = CheckCollisionRayBox(ray : Ray, box_ : BoundingBox) : Bool

  fun get_collision_ray_model = GetCollisionRayModel(ray : Ray, model : Model*) : RayHitInfo

  fun get_collision_ray_triangle = GetCollisionRayTriangle(ray : Ray, p1 : Vector3, p2 : Vector3, p3 : Vector3) : RayHitInfo

  fun get_collision_ray_ground = GetCollisionRayGround(ray : Ray, groundHeight : Float32) : RayHitInfo

  fun load_text = LoadText(fileName : UInt8*) : UInt8*

  fun load_shader = LoadShader(
    vsFileName : UInt8*,
    fsFileName : UInt8*
  ) : Shader

  fun load_shader_code = LoadShaderCode(
    vsCode : UInt8*,
    fsCode : UInt8*
  ) : Shader

  fun unload_shader = UnloadShader(shader : Shader)

  fun get_shader_default = GetShaderDefault : Shader

  fun get_texture_default = GetTextureDefault : Texture2D

  fun get_shader_location = GetShaderLocation(
    shader : Shader,
    uniformName : UInt8*
  ) : Int32

  fun set_shader_value = SetShaderValue(
    shader : Shader,
    uniformLoc : Int32,
    value : Float32*,
    size : Int32
  )

  fun set_shader_valuei = SetShaderValuei(
    shader : Shader,
    uniformLoc : Int32,
    value : Int32*,
    size : Int32
  )

  fun set_shader_value_matrix = SetShaderValueMatrix(shader : Shader, uniformLoc : Int32, mat : Matrix)

  fun set_matrix_projection = SetMatrixProjection(proj : Matrix)

  fun set_matrix_modelview = SetMatrixModelview(view : Matrix)

  fun get_matrix_modelview = GetMatrixModelview : Matrix

  fun gen_texture_cubemap = GenTextureCubemap(
    shader : Shader,
    skyHDR : Texture2D,
    size : Int32
  ) : Texture2D

  fun get_texture_irradiance = GenTextureIrradiance(
    shader : Shader,
    cubemap : Texture2D,
    size : Int32
  ) : Texture2D

  fun gen_texture_prefilter = GenTexturePrefilter(
    shader : Shader,
    cubemap : Texture2D,
    size : Int32
  ) : Texture2D

  fun gen_texture_BRDF = GenTextureBRDF(
    shader : Shader,
    cubemap : Texture2D,
    size : Int32
  ) : Texture2D

  fun begin_shader_mode = BeginShaderMode(shader : Shader)

  fun end_shader_mode = EndShaderMode

  fun begin_blend_mode = BeginBlendMode(mode : Int32)

  fun end_blend_mode = EndBlendMode

  fun get_vr_device_info = GetVrDeviceInfo(vrDeviceType : Int32) : VrDeviceInfo

  fun init_vr_simulator = InitVrSimulator(info : VrDeviceInfo)

  fun close_vr_simulator = CloseVrSimulator

  fun vr_simulator_ready? = IsVrSimulatorReady : Bool

  fun set_vr_distortion_shader = SetVrDistortionShader(shader : Shader)

  fun update_vr_tracking = UpdateVrTracking(camera : Camera3D*)

  fun toggle_vr_mode = ToggleVrMode

  fun begin_vr_drawing = BeginVrDrawing

  fun end_vr_drawing = EndVrDrawing

  fun init_audio_devide = InitAudioDevice

  fun close_audio_device = CloseAudioDevice

  fun audio_device_ready? = IsAudioDeviceReady : Bool

  fun set_master_volume = SetMasterVolume(volume : Float32)

  fun load_wave = LoadWave(fileName : UInt8*) : Wave

  fun load_wave_ex = LoadWaveEx(
    data : Void*,
    sampleCount : Int32,
    sampleRate : Int32,
    sampleSize : Int32,
    channels : Int32
  ) : Wave

  fun load_sound = LoadSound(fileName : UInt8*) : Sound

  fun load_sound_from_wave = LoadSoundFromWave(wave : Wave) : Sound

  fun update_sound = UpdateSound(
    sound : Sound,
    data : Void*,
    samplesCount : Int32
  )

  fun unload_wave = UnloadWave(wave : Wave)

  fun unload_sound = UnloadSound(sound : Sound)

  fun play_sound = PlaySound(sound : Sound)

  fun pause_sound = PauseSound(sound : Sound)

  fun resume_sound = ResumeSound(sound : Sound)

  fun stop_sound = StopSound(sound : Sound)

  fun sound_playing? = IsSoundPlaying(sound : Sound) : Bool

  fun set_sound_volume = SetSoundVolume(sound : Sound, volume : Float32)

  fun set_sound_pitch = SetSoundPitch(sound : Sound, pitch : Float32)

  fun wave_format = WaveFormat(
    wave : Wave*,
    sampleRate : Int32,
    sampleSize : Int32,
    channels : Int32
  )

  fun wave_copy = WaveCopy(wave : Wave) : Wave

  fun wave_crop = WaveCrop(
    wave : Wave*,
    initSample : Int32,
    finalSample : Int32
  )

  fun get_wave_data = GetWaveData(wave : Wave) : Float32*

  fun load_music_stream = LoadMusicStream(fileName : UInt8*) : Music

  fun unload_music_stream = UnloadMusicStream(music : Music)

  fun play_music_stream = PlayMusicStream(music : Music)

  fun update_music_stream = UpdateMusicStream(music : Music)

  fun stop_music_stream = StopMusicStream(music : Music)

  fun pause_music_stream = PauseMusicStream(music : Music)

  fun resume_music_stream = ResumeMusicStream(music : Music)

  fun music_playing? = IsMusicPlaying(music : Music) : Bool

  fun set_music_volume = SetMusicVolume(music : Music, volume : Float32)

  fun set_music_pitch = SetMusicPitch(music : Music, pitch : Float32)

  fun set_music_loop_count = SetMusicLoopCount(music : Music, count : Int32)

  fun get_music_time_length = GetMusicTimeLength(music : Music) : Float32

  fun get_music_time_played = GetMusicTimePlayed(music : Music) : Float32

  fun init_audio_stream = InitAudioStream(
    sampleRate : UInt32,
    sampleSize : UInt32,
    channels : UInt32
  ) : AudioStream

  fun update_audio_stream = UpdateAudioStream(
    stream : AudioStream,
    data : Void*,
    samplesCount : Int32
  )

  fun close_audio_stream = CloseAudioStream(stream : AudioStream)

  fun audio_buffer_precessed? = IsAudioBufferProcessed(stream : AudioStream) : Bool

  fun play_audio_stream = PlayAudioStream(stream : AudioStream)

  fun pause_audio_stream = PauseAudioStream(stream : AudioStream)

  fun resume_audio_stream = ResumeAudioStream(stream : AudioStream)

  fun audio_stream_playing? = IsAudioStreamPlaying(stream : AudioStream) : Bool

  fun stop_audio_stream = StopAudioStream(stream : AudioStream)

  fun set_audio_stream_volume = SetAudioStreamVolume(stream : AudioStream, volume : Float32)

  fun set_audio_stream_pitch = SetAudioStreamPitch(stream : AudioStream, pitch : Float32)
end
